[tool.poetry]
name = "campground-moving-to"
version = "0.1.0"
description = "Just a way to match names on a couple of lists and make a new one."
authors = ["Jason Hutson <110316760+HutsonJason@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "campground_moving_to"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
